Adição de links e finalização do reset.css

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <nav>
             <img src="Imagens/AÇO-FORTE-LOGO.png" height="60px" width="60px">
             <ul>
-                <li>Início</li>
-                <li>Produtos</li>
-                <li>Sobre</li>
-                <li>Contato</li>
+                <a href="#"><li>Início</li></a>
+                <a href="#"><li>Produtos</li></a>
+                <a href="#"><li>Sobre</li></a>
+                <a href="#"><li>Contato</li></a>
             </ul>
         </nav>
         <main>
@@ -29,10 +29,10 @@
     <section class="produtos">
         <h1 class="main-text">Nossos Produtos</h1>
         <ul>
-            <li>Colunas</li>
-            <li>Vergalhões</li>
-            <li>Barra redonda</li>
-            <li>Cantoneiras</li>
+            <a href="#"><li>Colunas</li></a>
+            <a href="#"><li>Vergalhões</li></a>
+            <a href="#"><li>Barra redonda</li></a>
+            <a href="#"><li>Cantoneiras</li></a>
         </ul>
         <img src="Imagens/Produtos/COLUNAS.png" height="150px" width="150px">
     </section>
