Adição de algumas estilizações de font

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
     <link rel="icon" type="image/x-icon" href="Imagens/AÇO-FORTE-LOGO.png">
     <link rel="stylesheet" href="Assets/style.css">
     <link rel="stylesheet" href="Assets/font-style.css">
@@ -15,10 +18,10 @@
         <nav>
             <img src="Imagens/AÇO-FORTE-LOGO.png" height="60px" width="60px">
             <ul>
-                <a href="#"><li>Início</li></a>
-                <a href="#"><li>Produtos</li></a>
-                <a href="#"><li>Sobre</li></a>
-                <a href="#"><li>Contato</li></a>
+                <a href="#" class="menu-inicio"><li>Início</li></a>
+                <a href="#" class="menu-inicio"><li>Produtos</li></a>
+                <a href="#" class="menu-inicio"><li>Sobre</li></a>
+                <a href="#" class="menu-inicio"><li>Contato</li></a>
             </ul>
         </nav>
         <main>
