Finalização da Home

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <section class="inicio">
         <nav>
-            <img src="Imagens/AÇO-FORTE-LOGO.png" height="60px" width="60px">
+            <img src="Imagens/AÇO-FORTE-LOGO.png" height="90px" width="90px">
             <ul>
                 <a href="#" class="menu-inicio"><li>Início</li></a>
                 <a href="#" class="menu-inicio"><li>Produtos</li></a>
@@ -25,7 +25,9 @@
             </ul>
         </nav>
         <main>
+            <div class="ajuste-main-text">
             <h1 class="main-text">O melhor em aço para sua obra você encontra aqui.</h1>
+            </div>
             <a href="#"><button>Nossos Produtos</button></a>
         </main>
     </section>
