Finalização de Produtos

--- a/index.html
+++ b/index.html
@@ -32,14 +32,18 @@
         </main>
     </section>
     <section class="produtos">
-        <h1 class="main-text">Nossos Produtos</h1>
-        <ul>
-            <a href="#"><li>Colunas</li></a>
-            <a href="#"><li>Vergalhões</li></a>
-            <a href="#"><li>Barra redonda</li></a>
-            <a href="#"><li>Cantoneiras</li></a>
-        </ul>
-        <img src="Imagens/Produtos/COLUNAS.png" height="150px" width="150px">
+        <div class="ajuste-top-produtos">
+            <h1 class="main-text">Nossos Produtos</h1>
+            <ul class="menu-produtos">
+                <a href="#"><li>Colunas</li></a>
+                <a href="#"><li>Vergalhões</li></a>
+                <a href="#"><li>Barra redonda</li></a>
+                <a href="#"><li>Cantoneiras</li></a>
+            </ul>
+        </div>
+        <div class="ajuste-card-produto">
+            <img src="Imagens/Produtos/COLUNAS.png" height="350px" width="350px">
+        </div>
     </section>
     <section class="sobre">
         <h1 class="main-text">Sobre Nossa Empresa</h1>
