atualização na pag. produtos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
     <section class="produtos">
         <div class="ajuste-top-produtos">
-            <h1 class="main-text">Nossos Produtos</h1>
+            <h1 id="produtos" class="main-text">Nossos Produtos</h1>
             <ul class="menu-produtos">
                 <a href="#"><li>Colunas</li></a>
                 <a href="#"><li>Vergalhões</li></a>
