ajuste de rodapé

--- a/index.html
+++ b/index.html
@@ -66,5 +66,16 @@
             </form>
         </div>
     </section>
+    <footer class="rodape">
+        <p>
+            2022 - Designed With ♥ By 
+            <span class="especial-color">
+                JS CODE
+            </span>
+            <span>
+                 - TODOS OS DIREITOS RESERVADOS
+            </span>
+        </p>
+    </footer>
 </body>
 </html>
