Finalização do esboço do site

--- a/index.html
+++ b/index.html
@@ -55,13 +55,19 @@
         </div>
     </section>
     <section class="contato">
-        <h1 class="main-text">Contato</h1>
+        <div class="ajuste-main-text-contato">
+            <h1 class="main-text">Contato</h1>
+        </div>
         <div class="lado-esquerdo">
-            <h3 class="secundary-text">Endereço</h3>
+            <h3 class="secundary-text">Endereço: Av. Tomás Osterne de Alençar, n°390 - São Miguel, Crato - CE, 63122-090</h3>
         </div>
         <div class="lado-direito">
             <form action="send" method="get">
-                <input type="text">
+                <input type="text" placeholder="Nome">
+                <input type="email" placeholder="E-mail">
+                <input type="text" placeholder="Endereço">
+                <input type="phonenumber" placeholder="Telefone">
+                <textarea name="MENSAGEM" id="" cols="60" rows="10" placeholder="Sua Mensagem aqui!"></textarea>
                 <input type="button" value="Enviar">
             </form>
         </div>
