incrementos de navegação

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <title>Aço Forte</title>
 </head>
 <body>
-    <section class="inicio">
+    <section id="inicioPg" class="inicio">
         <nav>
-            <img src="Imagens/AÇO-FORTE-LOGO.png" height="90px" width="90px">
+            <a href="#inicioPg"><img src="Imagens/AÇO-FORTE-LOGO.png" height="90px" width="90px"></a>
             <ul>
-                <a href="#" class="menu-inicio"><li>Início</li></a>
-                <a href="#" class="menu-inicio"><li>Produtos</li></a>
-                <a href="#" class="menu-inicio"><li>Sobre</li></a>
-                <a href="#" class="menu-inicio"><li>Contato</li></a>
+                <a href="#inicioPg" class="menu-inicio"><li>Início</li></a>
+                <a href="#produtosPg" class="menu-inicio"><li>Produtos</li></a>
+                <a href="#sobrePg" class="menu-inicio"><li>Sobre</li></a>
+                <a href="#contatoPg" class="menu-inicio"><li>Contato</li></a>
             </ul>
         </nav>
         <main>
@@ -31,7 +31,7 @@
             <a href="#"><button>Nossos Produtos</button></a>
         </main>
     </section>
-    <section class="produtos">
+    <section id="produtosPg" class="produtos">
         <div class="ajuste-top-produtos">
             <h1 id="produtos" class="main-text">Nossos Produtos</h1>
             <ul class="menu-produtos">
@@ -45,7 +45,7 @@
             <img src="Imagens/Produtos/COLUNAS.png" height="350px" width="350px">
         </div>
     </section>
-    <section class="sobre">
+    <section id="sobrePg" class="sobre">
         <h1 class="main-text">Sobre Nossa Empresa</h1>
         <div class="ajuste-texto-sobre">
             <h3 class="secundary-text">
@@ -54,7 +54,7 @@
             </h3>
         </div>
     </section>
-    <section class="contato">
+    <section id="contatoPg" class="contato">
         <div class="ajuste-main-text-contato">
             <h1 class="main-text">Contato</h1>
         </div>
