incremento da funcionalidade do botão na home

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="ajuste-main-text">
             <h1 class="main-text">O melhor em aço para sua obra você encontra aqui.</h1>
             </div>
-            <a href="#"><button>Nossos Produtos</button></a>
+            <a href="#produtosPg"><button>Nossos Produtos</button></a>
         </main>
     </section>
     <section id="produtosPg" class="produtos">
