adição de responsividade

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <input type="email" placeholder="E-mail">
                 <input type="text" placeholder="Endereço">
                 <input type="phonenumber" placeholder="Telefone">
-                <textarea name="MENSAGEM" id="" cols="60" rows="10" placeholder="Sua Mensagem aqui!"></textarea>
+                <textarea name="MENSAGEM" id="textarea" cols="60" rows="10" placeholder="Sua Mensagem aqui!"></textarea>
                 <input type="button" value="Enviar">
             </form>
         </div>
