estilização do formulário

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         </div>
         <div class="lado-direito">
             <form action="send" method="get">
-                <input type="text" placeholder="Nome">
-                <input type="email" placeholder="E-mail">
-                <input type="text" placeholder="Endereço">
-                <input type="phonenumber" placeholder="Telefone">
-                <textarea name="MENSAGEM" id="textarea" cols="60" rows="10" placeholder="Sua Mensagem aqui!"></textarea>
-                <input type="button" value="Enviar">
+                <input class="input-form" type="text" placeholder="Nome">
+                <input class="input-form" type="email" placeholder="E-mail">
+                <input class="input-form" type="text" placeholder="Endereço">
+                <input class="input-form" type="phonenumber" placeholder="Telefone">
+                <textarea class="input-form" name="mensagem" id="textarea" cols="60" rows="10" placeholder="Sua Mensagem aqui!"></textarea>
+                <input class="input-form" type="button" value="Enviar">
             </form>
         </div>
         <button id="back-to-top"><img src="Imagens/top.png"></button>
